<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ViewcontentVer1Category.FragmentShowFullDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintShowFullDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/imageviewWater"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/layout_height_264dp"
            android:src="@drawable/imageviewproduct"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/textViewNameWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_marginLeft_16"
            android:layout_marginTop="@dimen/layout_marginTop_9dp"
            android:text="@string/waterEco"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageviewWater"/>

        <TextView
            android:id="@+id/textViewNumberForLiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_marginLeft_16"
            android:text="@string/_500ml"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewNameWater" />

        <ImageView
            android:id="@+id/buttonSubtracktTheAmount"
            android:layout_width="@dimen/layout_width_32dp"
            android:layout_height="@dimen/layout_height_32dp"
            app:layout_constraintTop_toBottomOf="@id/imageviewWater"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/layout_marginTop_16dp"
            android:layout_marginRight="@dimen/layout_marginRight_97dp"
            android:src="@drawable/buttonsubtrackttheanount"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/buttonSubtracktTheAmount"
            app:layout_constraintRight_toLeftOf="@id/buttonAddQuantity"
            app:layout_constraintTop_toBottomOf="@id/imageviewWater"
            android:layout_marginTop="@dimen/layout_marginTop_24dp"
            android:text="@string/n99"
            />

        <ImageView
            android:id="@+id/buttonAddQuantity"
            android:layout_width="@dimen/layout_width_32dp"
            android:layout_height="@dimen/layout_height_32dp"
            app:layout_constraintTop_toBottomOf="@id/imageviewWater"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/layout_marginTop_16"
            android:layout_marginEnd="@dimen/layout_marginRight_16"
            android:src="@drawable/addquantity"
            />

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_productDescription"
            app:layout_constraintTop_toBottomOf="@id/textViewNumberForLiter"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/layout_marginTop_24dp"
            android:layout_marginStart="@dimen/layout_marginLeft_14dp"
            />

        <TextView
            android:id="@+id/textViewLitres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/productDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/layout_marginTop_12dp"
            android:layout_marginStart="@dimen/layout_marginLeft_16"
            android:text="@string/_1_5"
            />
        <TextView
            android:id="@+id/typeLitres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewLitres"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/layout_marginLeft_16"
            android:text="@string/letter_L"
            />

        <TextView
            android:id="@+id/shelfLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/typeLitres"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/layout_marginTop_24dp"
            android:layout_marginStart="@dimen/layout_marginLeft_16"
            android:text="@string/shelfLife"
            />

        <TextView
            android:id="@+id/numbersOfDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/shelfLife"
            android:layout_marginTop="@dimen/layout_marginLeft_14dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/layout_marginLeft_14dp"
            android:text="@string/numbersOfDay365"
            />
        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/numbersOfDay"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/layout_marginTop_26dp"
            android:layout_marginStart="@dimen/layout_marginLeft_16"
            android:text="@string/textViewDescription"
            />
        <TextView
            android:id="@+id/textViewProductDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/layout_marginTop_14dp"
            android:layout_marginStart="@dimen/layout_marginLeft_16"
            android:text="@string/textViewProductDescription"
            />

        <TextView
            android:id="@+id/textViewStorageCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewProductDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/layout_marginTop_26dp"
            android:layout_marginStart="@dimen/layout_marginLeft_16"
            android:text="@string/textViewStorageCondition"
            />

        <TextView
            android:id="@+id/textViewStorageTemparature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewStorageCondition"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/layout_marginTop_26dp"
            android:layout_marginStart="@dimen/layout_marginLeft_16"
            android:text="@string/textViewStorageTemparature"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>